# carousel

./: CMakeLists.txt  CMakePresets.json  animatedwidget.cpp  commonresources.qrc  gallery.cpp  gallery.h  galleryview.cpp  galleryview.h  imageview.cpp  imageview.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  toast.h
